BUG #16806: ALTER TABLE fails when creating new field not last in table Moved some code to else path to avoid delete, create, delete, create scenarios. Fixed up the partition info object for some cases where we move from default partitioning in NDB to default partitioning using partitioning.